# tinyecs

./: .flake8  Changelog.md  LICENSE  README.md  pyproject.toml  setup.py  speed_test.py  tester.py
demos/: asteroid_ship.py  background.py  bouncing_sprites.py  example.py  homing-missiles.py  hunter.py  marquee.py  mouse.py
example/: example.py
src/tinyecs/: __init__.py  components.py  compsys.py  demo.py  tutorial.py
src/tinyecs/demos/: background.py  bouncing_sprites.py  example.py  homing-missiles.py  marquee.py
tests/: test_tinyecs.py
tinyecs/: __init__.py  components.py  tinyecs.py
