[project]
name = "tinyecs"
description = "The teeniest, tiniest ECS system"
version = "0.2.9"
readme = "README.md"

authors = [
    { name="Michael Lamertz", email="michael.lamertz@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame",
]

dependencies = [
    "pgcooldown"
]

[project.optional-dependencies]

[project.scripts]
tinyecs-demo = 'tinyecs.demo:main'

[project.urls]
homepage = "https://github.com/dickerdackel/tinyecs"
bugtracker = "https://github.com/DickerDackel/tinyecs/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-rA -s --cov-report term-missing -s --cov=tinyecs"
testpaths = [
    "tests",
]
